# brimstone

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
lib/: Cargo.toml
lib/src/: bent_gradient.rs  blur.rs  designer.rs  gamut_mapping.rs  hue_gradient.rs  lab_ui.rs  lib.rs  linear_gradient.rs  rotator.rs  space_filling_gradient.rs  space_filling_gradient_2.rs  spiral_gradient.rs  utils.rs
src/: gamut_mapping.rs  main.rs
standalone/: Cargo.toml
standalone/src/: main.rs
wasm/: Cargo.toml  Makefile.toml  rust-toolchain.toml
wasm/.cargo/: config
wasm/src/: lib.rs
wasm/web_src/: index.html
