[package]
authors = ["joel nises <joel.nises@gmail.com>"]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.18.0"
env_logger = "0.9"
anyhow = "1.0"
palette = "0.6.0"
rayon = "1.5.2"
image = { version="0.24.1", default-features = false, features = ["png"] }
native-dialog = { version="0.6.3", features = ["windows_dpi_awareness", "windows_visual_styles"] }
glam = "0.21"
strum = "0.24.1"
strum_macros = "0.24.2"
hilbert = "0.1.2"
num-bigint = "0.4.3"
once_cell = "1.13.0"
