[package]
authors = ["joel nises <joel.nises@gmail.com>"]
edition = "2021"
name = "brimstone"
version = "0.1.0"

[lib]
# rlib needed for tests
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
eframe = "0.17.0"
env_logger = "0.9"
lib = {path = "../lib"}
log = "0.4.16"
web-sys = {version = "0.3", features = ["console", "Window"]}
wasm-bindgen-rayon = { version = "1.0", features = ["no-bundler"] }

[profile.release]
# make things smaller
codegen-units = 1
lto = true
opt-level = 's'

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
